Revert "Revert "Fixed overflow for readme container headers""
This reverts commit 205d75f44b0ffee8beb7d12b73c0d780cf5e2348.

--- a/zeek-package-website/static/css/style.css
+++ b/zeek-package-website/static/css/style.css
@@ -153,6 +153,10 @@ h2 {
     max-height: 100%;
 }
 
+.readme-container h1 {
+    overflow: hidden;
+}
+
 .small-card {
     background-color: #FFFFFF;
     border-radius: 6px;
